# amnesia

./: .gitignore  CMakeLists.txt  README.md  amnesia.slnx  vcpkg.json
AmnesiaAMFP/: AmnesiaAMFP.vcxproj  AmnesiaAMFP.vcxproj.filters  CMakeLists.txt  LuxBase.cpp  LuxBase.h  LuxDebugHandler.cpp  LuxEnemy_Grunt.cpp  LuxInputHandler.cpp  LuxInputHandler.h  LuxMainMenu.cpp  LuxMap.cpp  LuxScriptHandler.cpp  LuxTypes.h  vcpkg.json
AmnesiaTDD/: AmnesiaTDD.vcxproj  CMakeLists.txt  LuxBase.cpp  LuxBase.h  LuxDebugHandler.cpp  LuxEnemy_Grunt.cpp  LuxInputHandler.cpp  LuxInputHandler.h  LuxMainMenu.cpp  LuxMap.cpp  LuxScriptHandler.cpp  LuxTypes.h  vcpkg.json
Game/src/game/: Lux.sln  Lux.vcxproj
HPL2/: CMakeLists.txt  HPL2.filters  HPL2.vcxproj  vcpkg.json
HPL2/core/: HPL2_0.sln  HPL2_0.vcxproj  HPL2_0.vcxproj.filters
HPL2/core/include/graphics/: Renderer.h
HPL2/core/include/impl/: GamepadSDL2.h  LowLevelGraphicsSDL.h
HPL2/core/include/input/: InputTypes.h
HPL2/core/sources/graphics/: Renderer.cpp
HPL2/core/sources/impl/: LowLevelGraphicsSDL.cpp  LowLevelInputSDL.cpp  LowLevelSystemSDL.cpp  MeshLoaderFBX.cpp  MouseSDL.cpp  MutexSDL.cpp  PlatformWin32.cpp  SDLEngineSetup.cpp
HPL2/core/sources/system/: String.cpp
HPL2/include/engine/: EngineTypes.h
HPL2/include/glad/: gl.h
HPL2/include/graphics/: GraphicsTypes.h
HPL2/include/impl/: GLSLProgram.h  GLSLShader.h  GamepadSDL2.h  GamepadSDL3.h  KeyboardSDL.h  LowLevelGraphicsOpenGL.h  LowLevelGraphicsSDL.h  LowLevelGraphicsSDLGpu.h  LowLevelInputSDL.h  MeshLoaderFBX.h  MutexSDL.h  OpenALSoundChannel.h  OpenALSoundData.h  PBuffer.h  SDLEngineSetup.h  SDLTexture.h  TextureGL.h
HPL2/include/input/: InputTypes.h
HPL2/include/resources/: WorldLoaderHplMap.h
HPL2/include/sound/: OAL_EFXManager.h  OAL_Effect.h  OAL_EffectSlot.h  OAL_Effect_Reverb.h  OAL_Filter.h  OAL_Source.h  OAL_SourceManager.h  OAL_WAVSample.h
HPL2/include/system/: MemoryManager.h  Platform.h
HPL2/sources/: thirdparty.cpp
HPL2/sources/engine/: Engine.cpp
HPL2/sources/impl/: CollideShapeNewton.cpp  FrameBufferGL.cpp  GLSLProgram.cpp  GLSLShader.cpp  GamepadSDL2.cpp  GamepadSDL3.cpp  KeyboardSDL.cpp  LowLevelGraphicsOpenGL.cpp  LowLevelGraphicsSDL.cpp  LowLevelGraphicsSDLGpu.cpp  LowLevelInputSDL.cpp  LowLevelPhysicsNewton.cpp  LowLevelResourcesSDL.cpp  LowLevelSoundOpenAL.cpp  LowLevelSystemSDL.cpp  MouseSDL.cpp  MutexSDL.cpp  OcclusionQueryOGL.cpp  PBuffer.cpp  PhysicsBodyNewton.cpp  PhysicsWorldNewton.cpp  PlatformWin32.cpp  SDLEngineSetup.cpp  SDLTexture.cpp  TextureGL.cpp  ThreadSDL.cpp  VertexBufferOGL_Array.cpp  VertexBufferOGL_VBO.cpp  VertexBufferOpenGL.cpp  VideoStreamTheora.cpp
HPL2/sources/input/: Gamepad.cpp  Input.cpp
HPL2/sources/resources/: BinaryBuffer.cpp  WorldLoaderHplMap.cpp
HPL2/sources/sound/: OAL_AudioData.cpp  OAL_Buffer.cpp  OAL_Device.cpp  OAL_EFX.cpp  OAL_EFXManager.cpp  OAL_Effect.cpp  OAL_EffectSlot.cpp  OAL_Effect_Reverb.cpp  OAL_Filter.cpp  OAL_Helper.cpp  OAL_Init.cpp  OAL_Loaders.cpp  OAL_LoggerObject.cpp  OAL_OggHelper.cpp  OAL_OggSample.cpp  OAL_OggStream.cpp  OAL_Playback.cpp  OAL_Sample.cpp  OAL_Source.cpp  OAL_SourceManager.cpp  OAL_Stream.cpp  OAL_WAVSample.cpp
HPL2/sources/system/: String.cpp
LangConv/: LangConv.vcxproj  LangConv.vcxproj.filters
Lux/: Lux.vcxproj  Lux.vcxproj.filters  LuxBase.cpp  LuxBase.h  LuxDebugHandler.cpp  LuxEffectHandler.cpp  LuxEffectHandler.h  LuxEnemy.h  LuxInsanityHandler.cpp  LuxInsanityHandler.h  LuxMapHandler.cpp  LuxMessageHandler.cpp  LuxMessageHandler.h  LuxPlayer.cpp  LuxPlayer.h  LuxPlayerHelpers.cpp  LuxPlayerHelpers.h  LuxPostEffects.cpp  LuxPostEffects.h  LuxProp_CritterBase.h  LuxScriptHandler.cpp  LuxScriptHandler.h
angelscript/: CMakeLists.txt  angelscript.vcxproj  angelscript.vcxproj.filters
angelscript/source/: as_debug.h
dependencies/OALWrapper/: CMakeLists.txt  OALWrapper.sln
dependencies/include/OpenAL/: OAL_EFXManager.h  OAL_Effect.h  OAL_EffectSlot.h  OAL_Funcs.h  OAL_Init.h  OAL_LoggerObject.h  OAL_Types.h
dependencies/include/glad/: glx.h  wgl.h
dependencies/sources/OpenAL/: OAL_EFXManager.cpp  OAL_Source.cpp  OAL_SourceManager.cpp  OAL_Stream.cpp
newton/: CMakeLists.txt  newton.vcxproj  newton.vcxproj.filters
newton/core/: dgTypes.h
newton/lib/: newtond.idb
newton/physics/: dgBody.cpp  dgCollisionCapsule.cpp
